Fixed static checkbox foreground

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,69 +1,87 @@
 ﻿<mah:MetroWindow x:Class="res2source.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:res2source"
-        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                 xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        WindowTitleBrush="#202020"
-                 Background="White"
-                 Topmost="False"
-        mc:Ignorable="d"
-                 MinWidth="600"
-                 MinHeight="800"
-        Title="Res2Source" Height="450" Width="800">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:res2source"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    WindowTitleBrush="#202020"
+    Background="White"
+    Topmost="False"
+    mc:Ignorable="d"
+    MinWidth="600"
+    MinHeight="800"
+    Title="Res2Source" Height="450" Width="800">
     <Window.Resources>
-        <local:ListCountToVisibilityConverter x:Key="ListCountToVisibilityConverter"/>
-        <local:EmptyListToBooleanConverter x:Key="EmptyListToBooleanConverter"/>
+        <local:ListCountToVisibilityConverter x:Key="ListCountToVisibilityConverter" />
+        <local:EmptyListToBooleanConverter x:Key="EmptyListToBooleanConverter" />
         <sys:Boolean x:Key="True">True</sys:Boolean>
         <sys:Boolean x:Key="False">False</sys:Boolean>
     </Window.Resources>
     <Grid>
         <Grid Margin="16">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal">
                 <WrapPanel VerticalAlignment="Top" Orientation="Horizontal">
 
-                    <Label Foreground="#202020" VerticalAlignment="Center"  Content="Class name" Margin="0 0 16 0"></Label>
-                    <TextBox Padding="8" Text="{Binding ClassName,Mode=TwoWay}" VerticalAlignment="Center" Grid.Column="1" mah:TextBoxHelper.Watermark="Class name"/>
-                    <Button x:Name="AddFile" Click="AddFile_Click" Margin="16 0 0 0" Padding="16 8" Grid.Column="2" Content="Add file"></Button>               
-                    <CheckBox Margin="16 0 0 0" IsChecked="{Binding UseStatic}">Static variables</CheckBox>
+                    <Label Foreground="#202020" VerticalAlignment="Center" Content="Class name"
+                        Margin="0 0 16 0"></Label>
+                    <TextBox Padding="8" Text="{Binding ClassName,Mode=TwoWay}"
+                        VerticalAlignment="Center" Grid.Column="1"
+                        mah:TextBoxHelper.Watermark="Class name" />
+                    <Button x:Name="AddFile" Click="AddFile_Click" Margin="16 0 0 0" Padding="16 8"
+                        Grid.Column="2" Content="Add file"></Button>
+                    
                 </WrapPanel>
 
             </StackPanel>
-            <Grid  Grid.Row="2" Margin="8">
-                <Border Visibility="{Binding Files.Count,Converter={StaticResource ListCountToVisibilityConverter},ConverterParameter={StaticResource True}}" Panel.ZIndex="8"  VerticalAlignment="Center" HorizontalAlignment="Center" Padding="8">
-                    <Label Foreground="Black" FontSize="16" Content="No items to view"/>
+            <Grid Grid.Row="2" Margin="8">
+                <Border
+                    Visibility="{Binding Files.Count,Converter={StaticResource ListCountToVisibilityConverter},ConverterParameter={StaticResource True}}"
+                    Panel.ZIndex="8" VerticalAlignment="Center" HorizontalAlignment="Center"
+                    Padding="8">
+                    <Label Foreground="Black" FontSize="16" Content="No items to view" />
                 </Border>
-                <ScrollViewer >
+                <ScrollViewer>
                     <ItemsControl ItemsSource="{Binding Files}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <StackPanel Orientation="Vertical"/>
+                                <StackPanel Orientation="Vertical" />
                             </ItemsPanelTemplate>
                         </ItemsControl.ItemsPanel>
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <Border Background="#cc202020" Margin="0 8" CornerRadius="16" Padding="16" BorderBrush="#40FFFFFF" BorderThickness="2">
+                                <Border Background="#cc202020" Margin="0 8" CornerRadius="16"
+                                    Padding="16" BorderBrush="#40FFFFFF" BorderThickness="2">
                                     <Grid>
                                         <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
                                         </Grid.RowDefinitions>
-                                        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                                            <Button BorderThickness="0" x:Name="RemoveItem" Click="RemoveItem_Click" Padding="16 8" Background="Red" Foreground="White" Tag="{Binding}">Remove</Button>
-
-
-                                        </StackPanel>
-                                        <TextBox Grid.Row="1" Text="{Binding ObjectName,Mode=TwoWay}" Padding="8" Margin="0 8"/>
-                                        <Label Margin="0 8" Grid.Row="2" Content="{Binding Path}" Foreground="White"/>
+                                        <Grid HorizontalAlignment="Stretch">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                                <ColumnDefinition Width="*"></ColumnDefinition>
+                                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                            </Grid.ColumnDefinitions>
+                                            <CheckBox Foreground="White" Margin="16 0 0 0" IsChecked="{Binding UseStatic}">Static variables</CheckBox>
+                                            <Button Grid.Column="2" BorderThickness="0" x:Name="RemoveItem"
+                                                Click="RemoveItem_Click" Padding="16 8"
+                                                Background="Red" Foreground="White" Tag="{Binding}">
+                                                Remove</Button>
+                                        </Grid>
+                                        <TextBox Grid.Row="1"
+                                            Text="{Binding ObjectName,Mode=TwoWay}" Padding="8"
+                                            Margin="0 8" />
+                                        <Label Margin="0 8" Grid.Row="2" Content="{Binding Path}"
+                                            Foreground="White" />
                                     </Grid>
                                 </Border>
                             </DataTemplate>
@@ -72,7 +90,9 @@
                 </ScrollViewer>
             </Grid>
             <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button IsEnabled="{Binding Files.Count,Converter={StaticResource EmptyListToBooleanConverter},ConverterParameter={StaticResource False}}" Click="Export_Click" Cursor="Hand" Padding="16 8" Content="Export"></Button>
+                <Button
+                    IsEnabled="{Binding Files.Count,Converter={StaticResource EmptyListToBooleanConverter},ConverterParameter={StaticResource False}}"
+                    Click="Export_Click" Cursor="Hand" Padding="16 8" Content="Export"></Button>
             </StackPanel>
         </Grid>
     </Grid>
